Changelog
=========

1.6 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Django 1.10 support
 * Added the ``include_block`` template tag for improved StreamField template inclusion (Matt Westcott, Mikalai Radchuk)
 * Page slugs now allow unicode on Django >= 1.9 (Behzad Nategh)
 * Image upload form in image chooser now performs client side validation so that the selected file is not lost in the submission (Jack Paine)
 * oEmbed URL for audioBoom was updated (Janneke Janssen)
 * Remember tree location in page chooser when switching between Internal / External / Email link (Matt Westcott)
 * `FieldRowPanel` now creates equal-width columns automatically if `col*` classnames are not specified (Chris Rogers)
 * Form builder now validates against multiple fields with the same name (Richard McMillan)
 * The 'choices' field on the form builder no longer has a maximum length (Johannes Spielmann)
 * The wagtailimages.Filter model has been removed, and converted to a Python class instead (Gagaro)
 * Multiple ChooserBlocks inside a StreamField are now prefetched in bulk, for improved performance (Michael van Tellingen, Roel Bruggink, Matt Westcott)
 * Add new EmailBlock and IntegerBlock (Oktay Altay)
 * Added a new FloatBlock, DecimalBlock and a RegexBlock (Oktay Altay, Andy Babic)
 * Wagtail version number is now shown on the settings menu (Chris Rogers)
 * Added a system check to validate that fields listed in `search_fields` are defined on the model (Josh Schneier)
 * Added formal APIs for customising the display of StructBlock forms within the page editor (Matt Westcott)
 * `wagtailforms.models.AbstractEmailForm` now supports multiple email recipients (Serafeim Papastefanos)
 * Added ability to delete users through Settings -> Users (Vincent Audebert; thanks also to Ludolf Takens and Tobias Schmidt for alternative implementations)