@@ -69,5 +69,147 @@
     "fields": {
         "key": "boom"
     }
+},
+{
+    "pk": 1,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Root",
+        "numchild": 1,
+        "show_in_menus": false,
+        "live": true,
+        "depth": 1,
+        "content_type": ["wagtailcore", "page"],
+        "path": "0001",
+        "url_path": "/",
+        "slug": "root"
+    }
+},
+
+{
+    "pk": 2,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Welcome to the Wagtail test site!",
+        "numchild": 5,
+        "show_in_menus": false,
+        "live": true,
+        "depth": 2,
+        "content_type": ["wagtailcore", "page"],
+        "path": "00010001",
+        "url_path": "/home/",
+        "slug": "home"
+    }
+},
+
+{
+    "pk": 3,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Events",
+        "numchild": 4,
+        "show_in_menus": true,
+        "live": true,
+        "depth": 3,
+        "content_type": ["tests", "eventindex"],
+        "path": "000100010001",
+        "url_path": "/home/events/",
+        "slug": "events"
+    }
+},
+{
+    "pk": 3,
+    "model": "tests.eventindex",
+    "fields": {
+        "intro": "Look at our lovely events."
+    }
+},
+
+{
+    "pk": 4,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Christmas",
+        "numchild": 3,
+        "show_in_menus": true,
+        "live": true,
+        "depth": 4,
+        "content_type": ["tests", "eventpage"],
+        "path": "0001000100010001",
+        "url_path": "/home/events/christmas/",
+        "slug": "christmas"
+    }
+},
+{
+    "pk": 4,
+    "model": "tests.eventpage",
+    "fields": {
+        "date_from": "2014-12-25",
+        "audience": "public",
+        "location": "The North Pole",
+        "body": "<p>Chestnuts roasting on an open fire</p>",
+        "cost": "Free"
+    }
+},
+{
+    "pk": 5,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Santa's Grotto",
+        "numchild": 0,
+        "show_in_menus": true,
+        "live": true,
+        "depth": 5,
+        "content_type": ["modeladmintest", "venuepage"],
+        "path": "00010001000100010001",
+        "url_path": "/home/events/christmas/santas-grotto/",
+        "slug": "santas-grotto"
+    }
+},
+{
+    "pk": 5,
+    "model": "modeladmintest.venuepage",
+    "fields": {
+        "address": "The North Pole",
+        "capacity": 3
+    }
+},
+{
+    "pk": 6,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Santa's Workshop",
+        "numchild": 0,
+        "show_in_menus": true,
+        "live": true,
+        "depth": 5,
+        "content_type": ["modeladmintest", "venuepage"],
+        "path": "00010001000100010002",
+        "url_path": "/home/events/christmas/santas-workshop/",
+        "slug": "santas-workshop"
+    }
+},
+{
+    "pk": 6,
+    "model": "modeladmintest.venuepage",
+    "fields": {
+        "address": "The North Pole",
+        "capacity": 25
+    }
+},
+{
+    "pk": 7,
+    "model": "wagtailcore.page",
+    "fields": {
+        "title": "Claim your free present!",
+        "numchild": 0,
+        "show_in_menus": true,
+        "live": true,
+        "depth": 5,
+        "content_type": ["wagtailcore", "page"],
+        "path": "00010001000100010003",
+        "url_path": "/home/events/christmas/claim-free-present/",
+        "slug": "claim-free-present"
+    }
 }
 ]
